chore(ui): fix some tailwind classes

--- a/templates/index.html
+++ b/templates/index.html
@@ -18,12 +18,12 @@ extra_nav_buttons_mobile %}
   <div class="flex flex-col items-center gap-6">
     <img
       src="{{ url_for('static', filename='ibu-icon.svg') }}"
-      class="w-[340px] max-w-[80vw]"
+      class="w-85 max-w-[80vw]"
       alt="I.B.U. Icon"
     />
     <img
       src="{{ url_for('static', filename='ibu-text.svg') }}"
-      class="w-[800px] max-w-[80vw]"
+      class="w-200 max-w-[80vw]"
       alt="I.B.U. Text"
     />
   </div>
