--- a/templates/team-info.html
+++ b/templates/team-info.html
@@ -104,7 +104,7 @@ block head %} {{ super() }}
       </div>
 
       <div class="relative p-4">
-        <div id="pointsPieChart" class="h-[720px] w-full"></div>
+        <div id="pointsPieChart" class="h-180 w-full"></div>
 
         <!-- Loading overlay -->
         <div
