--- a/templates/admin.html
+++ b/templates/admin.html
@@ -288,7 +288,7 @@ content %}
       </div>
 
       <div class="mt-3 overflow-x-auto">
-        <div class="min-w-[760px] rounded-xl border border-white/10">
+        <div class="min-w-190 rounded-xl border border-white/10">
           <div
             class="grid grid-cols-5 gap-3 bg-white/5 px-3 py-2 text-xs font-semibold text-white/80"
           >
