--- a/templates/trends.html
+++ b/templates/trends.html
@@ -456,7 +456,7 @@ content %}
         </div>
 
         <div class="relative p-4">
-          <div class="h-[360px] sm:h-[420px]">
+          <div class="h-90 sm:h-105">
             <div id="trendsChart" class="w-full h-full"></div>
           </div>
 
